<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="sign_in_text">Sign In</string>
    <string name="sign_up_text">Sign up</string>
    <string translatable="false" name="loading_text">Loading</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string translatable="false" name="hello_blank_fragment">Hello blank fragment</string>

    <string translatable="false" name="username_hint_text">Username or Email</string>
    <string name="email_hint_text">Enter Email</string>
    <string name="otp_text">OTP Code</string>
    <string name="send_otp_text">Send OTP</string>
    <string name="password_hint_text">Password</string>
    <string name="new_password_hint_text">New Password</string>
    <string name="confirmpassword_hint_text">Confirm Password</string>
    <string name="confirm_new_password_hint_text">Confirm New Password</string>
    <string name="forgetpas_text">Forgot password?</string>
    <string name="or_signin_text">or sign in with</string>
    <string name="term_text_1">I have read and agree with the</string>
    <string name="term_text_2">Term and Privacy Policy</string>

    <string name="donthaveaccount_text">Don\'t have an account?</string>
    <string name="alreadyhaveaccount_text">Already have an account?</string>

    <string name="resetpass_text">Reset password</string>

    <string translatable="false" name="google">GOOGLE</string>
    <string translatable="false" name="facebook">FACEBOOK</string>
    <string translatable="false" name="guest">GUEST</string>

    <string name="email_format_error">This is not valid email</string>
    <string name="edittext_not_empty_error">This field cannot be empty</string>
    <string name="username_min_length_error">The length of \'Username\' must be at least 6 characters</string>
    <string name="password_min_length_error">The length of \'Password\' must be at least 6 characters</string>
    <string name="password_not_match_error">Password does not match</string>
    <string name="otp_not_empty_error">OTP is invalid</string>
    <string name="message_agree_term">You must agree to the terms and Privacy Policy</string>

    <string translatable="false" name="user_url">https://api.rofi.games</string>
    <string translatable="false" name="term_url">https://rofi.games/privacy-policy/</string>
    <string name="referral_code">Referral Code</string>


</resources>