<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.bzsdk.bzloginmodule.fragments.SignUpFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/usernamepass_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextTextEmailAddressLayout"
                android:layout_width="match_parent"
                android:maxWidth="350dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                style="@style/myTextInputLayout"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otp_edittext"
                    style="@style/myTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_baseline_person"
                    android:drawablePadding="10dp"
                    android:hint="@string/username_hint_text"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextPasswordLayout"
                style="@style/myTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:maxWidth="350dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass_edittext"
                    style="@style/myTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_baseline_security"
                    android:drawablePadding="10dp"
                    android:hint="@string/password_hint_text"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextConfirmPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:maxWidth="350dp"
                style="@style/myTextInputLayout"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmpass_edittext"
                    style="@style/myTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_baseline_security"
                    android:drawablePadding="10dp"
                    android:hint="@string/confirmpassword_hint_text"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/_term"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/usernamepass_layout"
            android:layout_centerHorizontal="true">

            <CheckBox
                android:id="@+id/checkbox_term"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:checked="true"
                android:layout_centerVertical="true"
                android:outlineSpotShadowColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_term"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center_horizontal|left"
                android:text="@string/term_text"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/checkbox_term"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/signup_btn"
            style="@style/myButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/_term"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up_text" />

        <TextView
            android:id="@+id/txt_backto_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_btn"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:text="@string/alreadyhaveaccount_text"
            android:textSize="18dp" />
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>